// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON patch reducer adds a new year to the APD 1`] = `
Array [
  Object {
    "op": "replace",
    "path": "/years",
    "value": Array [
      "2019",
    ],
  },
  Object {
    "op": "add",
    "path": "/incentivePayments/ehAmt/2019",
    "value": Object {
      "1": 0,
      "2": 0,
      "3": 0,
      "4": 0,
    },
  },
  Object {
    "op": "add",
    "path": "/incentivePayments/ehCt/2019",
    "value": Object {
      "1": 0,
      "2": 0,
      "3": 0,
      "4": 0,
    },
  },
  Object {
    "op": "add",
    "path": "/incentivePayments/epAmt/2019",
    "value": Object {
      "1": 0,
      "2": 0,
      "3": 0,
      "4": 0,
    },
  },
  Object {
    "op": "add",
    "path": "/incentivePayments/epCt/2019",
    "value": Object {
      "1": 0,
      "2": 0,
      "3": 0,
      "4": 0,
    },
  },
  Object {
    "op": "add",
    "path": "/keyPersonnel/0/costs/2019",
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": "/byKey/activityKey/years",
    "value": Array [
      "2019",
    ],
  },
  Object {
    "op": "add",
    "path": "/byKey/activityKey/contractorResources/0/hourly/data/2019",
    "value": Object {
      "hours": "",
      "rate": "",
    },
  },
  Object {
    "op": "add",
    "path": "/byKey/activityKey/contractorResources/0/years/2019",
    "value": 0,
  },
  Object {
    "op": "add",
    "path": "/byKey/activityKey/expenses/0/years/2019",
    "value": 0,
  },
  Object {
    "op": "add",
    "path": "/byKey/activityKey/statePersonnel/0/years/2019",
    "value": Object {
      "amt": "",
      "perc": "",
    },
  },
  Object {
    "op": "add",
    "path": "/byKey/activityKey/costAllocation/2019",
    "value": Object {
      "ffp": Object {
        "federal": 90,
        "state": 10,
      },
      "other": 0,
    },
  },
  Object {
    "op": "add",
    "path": "/byKey/activityKey/quarterlyFFP/2019",
    "value": Object {
      "1": Object {
        "combined": 25,
        "contractors": 25,
        "state": 25,
      },
      "2": Object {
        "combined": 25,
        "contractors": 25,
        "state": 25,
      },
      "3": Object {
        "combined": 25,
        "contractors": 25,
        "state": 25,
      },
      "4": Object {
        "combined": 25,
        "contractors": 25,
        "state": 25,
      },
    },
  },
]
`;

exports[`JSON patch reducer removes a year from the APD 1`] = `
Array [
  Object {
    "op": "remove",
    "path": "/years/0",
  },
  Object {
    "op": "remove",
    "path": "/incentivePayments/ehAmt/2019",
  },
  Object {
    "op": "remove",
    "path": "/incentivePayments/ehCt/2019",
  },
  Object {
    "op": "remove",
    "path": "/incentivePayments/epAmt/2019",
  },
  Object {
    "op": "remove",
    "path": "/incentivePayments/epCt/2019",
  },
  Object {
    "op": "remove",
    "path": "/keyPersonnel/0/costs/2019",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/years/0",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/contractorResources/0/hourly/data/2019",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/contractorResources/0/years/2019",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/expenses/0/years/2019",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/statePersonnel/0/years/2019",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/costAllocation/2019",
  },
  Object {
    "op": "remove",
    "path": "/byKey/activityKey/quarterlyFFP/2019",
  },
]
`;
